[project]
name = "country_state_city"
version = "0.0.1"
authors = [
    { name="0x747" }
]
description = "A simple Python API wrapper for the Country State City API."
readme = "README.md"
license = "LICENSE"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Natutal Language :: English"
]

[project.urls]
Homepage = "https://github.com/0x747/country_state_city.py"
Issues = "https://github.com/0x747/country_state_city.py/issues"